syntax = "proto3";
package KFMsg;
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
message PBObject
{
	// int32 属性列表
	map< string, sint32 > pbint32 = 1;		
	
	// uint32 属性列表
	map< string, uint32 > pbuint32 = 2;	

	// int64 属性列表
	map< string, sint64 > pbint64 = 3;	

	// uint64 属性列表
	map< string, uint64 > pbuint64 = 4;	

	// double 属性列表
	map< string, double > pbdouble = 5;	

	// string 属性列表
	map< string, bytes > pbstring = 6;	

	// 数组列表
	map< string, PBArray > pbarray = 7;	

	// 对象列表
	map< string, PBObject > pbobject = 8;	

	// 集合列表
	map< string, PBRecord > pbrecord = 9;	
}

// 游戏中只存在uint64的数值
message PBArray
{
	map< uint32, uint64 > pbuint64 = 1;	
}

message PBRecord
{
	// 对象列表
	map< uint64, PBObject > pbobject = 1;	
}
